@@ -1,3 +1,7 @@
+2010-12-28  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Cleanup: Fixed PHPdoc comments, type hints and XCLASS blocks
+
 2010-12-22  Tolleiv Nietsch  <typo3@tolleiv.de>
 
 	* Fixed bug:#11606 Remove "Send to review / pub" from contextmenu
